syntax = "proto3";

package greetClientStream;

option go_package = "greetpbClientStream";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService{
  rpc GreetStream(stream GreetRequest) returns (GreetResponse) {};
}